--- a/prj.conf
+++ b/prj.conf
@@ -1,6 +1,21 @@
 CONFIG_GPIO=y
-CONFIG_STD_CPP20=y
 CONFIG_CPLUSPLUS=y
-CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_STD_CPP20=y
 CONFIG_I2C=y
 CONFIG_LOG=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
+
+# ###### To enable STL------
+# CONFIG_NEWLIB_LIBC=y
+# CONFIG_LIB_CPLUSPLUS=y
+# ###### Shell------
+# CONFIG_SHELL=y
+# CONFIG_SHELL_LOG_LEVEL_INF=y
+
+###### Filesystem------
+# CONFIG_HEAP_MEM_POOL_SIZE=16384
+# CONFIG_FILE_SYSTEM=y
+# CONFIG_FILE_SYSTEM_SHELL=y
+
+###### Enable support for flash hardware------
+# CONFIG_FLASH=y
