enabled mpu6050 sensor

--- a/prj.conf
+++ b/prj.conf
@@ -5,9 +5,16 @@ CONFIG_I2C=y
 CONFIG_LOG=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
-# ###### To enable STL------
-# CONFIG_NEWLIB_LIBC=y
-# CONFIG_LIB_CPLUSPLUS=y
+###### To enable STL------
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_NANO=n
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_LIB_CPLUSPLUS=y
+
+# sensor
+CONFIG_SENSOR=y
+CONFIG_MPU6050=y
+CONFIG_MPU6050_TRIGGER_NONE=y
 # ###### Shell------
 # CONFIG_SHELL=y
 # CONFIG_SHELL_LOG_LEVEL_INF=y
