disable i2c interrupts by default

--- a/prj.conf
+++ b/prj.conf
@@ -1,7 +1,6 @@
 CONFIG_GPIO=y
 CONFIG_CPLUSPLUS=y
 CONFIG_STD_CPP20=y
-CONFIG_I2C=y
 CONFIG_LOG=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
@@ -11,7 +10,11 @@ CONFIG_NEWLIB_LIBC_NANO=n
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_LIB_CPLUSPLUS=y
 
-# sensor
+####### Peripherals
+CONFIG_I2C=y
+CONFIG_I2C_STM32_INTERRUPT=n
+
+########## IMU sensor
 CONFIG_SENSOR=y
 CONFIG_MPU6050=y
 CONFIG_MPU6050_TRIGGER_NONE=y
